# eter

./: .gitignore  LICENSE  README.md  eter.spec  pyproject.toml
.github/workflows/: release.yml
eter/: __init__.py  __main__.py  app.py  autostart.py  catalog.py  catalog_repository.py  commands.py  config.py  icons.py  menu_builder.py  metadata.py  metadata_sources.py  nowplaying_web.py  pack_editor.py  pack_service.py  platform_mac.py  player.py  player_panel.py  playlist.py  presenter.py  seeder.py  settings_dialog.py  theme.py  tray_menu.py  updater.py  urlprep.py  widgets.py
eter/resources/presets/: ex-yu.json  index.json  makedonski.json  world.json
packaging/: eter.desktop  eter.iss  launcher.py  make_icon.py
tests/: conftest.py  test_catalog.py  test_metadata.py  test_nowplaying_web.py  test_packs_remote.py  test_player_device.py  test_player_rms.py  test_playlist.py  test_presenter.py  test_reconnect.py  test_sleep_resume.py  test_tray_menu.py  test_ui.py  test_updater.py  test_version.py
