[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eter"
dynamic = ["version"]  # read from eter.__version__ (single source of truth)
description = "Cross-platform menu-bar internet radio player (Naxi + Macedonian stations by default)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Darko" }]
dependencies = [
    "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
eter = "eter.__main__:main"

[tool.setuptools]
packages = ["eter", "eter.resources"]

[tool.setuptools.dynamic]
version = { attr = "eter.__version__" }

[tool.setuptools.package-data]
"eter.resources" = ["*.json", "presets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
